Version 1.7.1.99
------------------------------------------------------------------------------

* Improved documentation thanks to patches from Tim Bates.

* Summarise now works iteratively so that later columns can refer to earlier.  (Thanks to Jim Hester, #44)

* New `take` function for subsetting along an arbitrary dimension.

Version 1.7.1
------------------------------------------------------------------------------

* Fix bug in id, using numeric instead of integer

Version 1.7
------------------------------------------------------------------------------

* `rbind.fill`: if a column contains both factors and characters (in different
  inputs), the resulting column will be coerced to character

* When there are more than 2^31 distinct combinations `id`, switches to a
  slower fallback strategy using strings (inspired by `merge`) that guarantees
  correct results. This fixes problems with `join` when joining across many
  columns. (Fixes #63)

* `split_indices` checks input more aggressively to prevent segfaults. 
   Fixes #43.

* fix small bug in `loop_apply` which lead to segfaults in certain
  circumstances. (Thanks to Pål Westermark for patch)

* `itertools` and `iterators` moved to suggests from imports so that plyr now
  only depends on base R.

Version 1.6
------------------------------------------------------------------------------

* documentation improved using new features of `roxygen2`

* fixed namespacing issue which lead to lost labels when subsetting the
  results of `*lply`

* `colwise` automatically strips off split variables.

* `rlply` now correctly deals with `rlply(4, NULL)` (thanks to bug report from
  Eric Goldlust)

* `rbind.fill` tries harder to keep attributes, retaining the attributes from
  the first occurrence of each column it finds. It also now works with
  variables of class `POSIXlt` and preserves the ordered status of factors.

* `arrange` now works with one column data frames

Version 1.5.2