@@ -1,6 +1,8 @@
 Version 1.7.1.99
 ------------------------------------------------------------------------------
 
+* `round_any` now works with `POSIXct` objects, thanks to Jean-Olivier Irisson (#76)
+
 * Improved documentation thanks to patches from Tim Bates.
 
 * Summarise now works iteratively so that later columns can refer to earlier.  (Thanks to Jim Hester, #44)
